<resources>
    <string name="imessagemainuri">http://www.huluwa.org/</string>
    <string name="VersionUri">http://www.huluwa.org/download/platfrom/android/update.json</string>
    <string name="ServerIp">222.77.191.206</string>
    <string name="RegisterAppleIDServer">https://service.ess.apple.com/WebObjects/VCProfileService.woa/wp/accountSetupSave</string>
    <string name="ForgetpasswordServer">https://iforgot.apple.com/iForgot/iForgot.html?app_type=ext&amp;app_id=1581</string>
    <string name="appleseriverstocheckpassword">https://appleid.apple.com/cgi-bin/WebObjects/MyAppleId.woa/wa/directToSignIn?localang=en</string>
    <string name="messageDB">im.db</string>
    <string name="appleIDDB">appleid.db</string>
    <string name="contactDB">imcontact.db</string>
    <string name="tokenDB">token.db</string>
    <string name="keyDB">key.db</string>
    <string name="recvfilepath_sdcard">/mnt/sdcard/IMFile/</string>
    <string name="aestmpfilepath_sdcard">/mnt/sdcard/IMFile/</string>
    <string name="recvfilepath_nosdcard">/data/sdcard/IMFile/</string>
    <string name="aestmpfilepath_nosdcard">/data/sdcard/DCIM/IMFile/</string>
    <string name="app_name">iMessage</string>
    <string name="account">name@email.com</string>
    <string name="password">password</string>
    <string name="login">Sign In</string>
    <string name="register2">Create new AppleID</string>
    <string name="forget_password">Forget Password?</string>
    <string name="loginout">Exit Login</string>
    <string name="exit">Exit</string>
    <string name="setting">Edit</string>
    <string name="search">Search</string>
    <string name="name">LastName</string>
    <string name="need">Required</string>
    <string name="password1">ReInput Password</string>
    <string name="sending_request">Sending Request</string>
    <string name="addtocontactactivity_add">Add</string>
    <string name="addtocontactactivity_add_cannotbeempty">Name Cannot Be Empty</string>
    <string name="showtext">Info</string>
    <string name="sendmessage">Send Message</string>
    <string name="sharecontact">Share Contact</string>
    <string name="email">Email</string>
    <string name="addtocontact">Add to Contacts</string>
    <string name="newmessage">New Message</string>
    <string name="reciver">To:</string>
    <string name="newappleid">New Account</string>
    <string name="nextstep">Next</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="thiswillbeyournewappleid">This will be your new Apple ID</string>
    <string name="passwordhint">Your password must be at least eight characters and include a number,an uppercase letter,and a lowercase letter.</string>
    <string name="questionhint">Provide a question and answer to verify your identity if you forget your password.</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="check">Verify</string>
    <string name="borthdayhint">Enter your date of birth below.</string>
    <string name="countryhint">Country or Region</string>
    <string name="countryhint1">Choose a country or region in which you reside.</string>
    <string name="positionhint">Location</string>
    <string name="recemailhint">Subscribe to emails?</string>
    <string name="recemailhint2">Subscribe</string>
    <string name="recemailhint1">Tap below to subscribe to emails with news,special offers, and info about related products and services from Apple.</string>
    <string name="edit">Edit</string>
    <string name="send">Send</string>
    <string name="resend">Forward</string>
    <string name="delete">Delete</string>
    <string name="choosecontacttosend">Choose a contact to text message</string>
    <string name="sendding">Sending</string>
    <string name="clearall">Clear All</string>
    <string name="group">Groups</string>
    <string name="allcontact">All Contacts</string>
    <string name="succes">Done</string>
    <string name="hint">Hint</string>
    <string name="chatactivity_resend">Resend?</string>
    <string name="sure">Ok</string>
    <string name="cancle">Cancel</string>
    <string name="chatactivity_rerec">Rereceive?</string>
    <string name="chatactivity_picture">Photo</string>
    <string name="chatactivity_video">Video</string>
    <string name="chatactivity_file">File</string>
    <string name="chatactivity_face">Emoji</string>
    <string name="chatactivity_selectafile">Choose a file to send</string>
    <string name="fail">Fail</string>
    <string name="welcome_hint">iMessages can be sent between iPhone,iPad,iPod touch,Mac,Android,and PC.</string>
    <string name="welcome_hint1">Learn more about</string>
    <string name="welcome_hint2">Get Started</string>
    <string name="chatactivity_install_fillmanager">Please install file managenment</string>
    <string name="chatactivity_addtocontact">Add to Contacts</string>
    <string name="chatactivity_contactmessage">Contact Info</string>
    <string name="chatactivity_sendtoother">Forward</string>
    <string name="chatactivity_delete">Delete</string>
    <string name="chatmsgentity_reach">Delivered</string>
    <string name="chatmsgentity_send">Desend</string>
    <string name="chatactivity_groupmessage">Group Message</string>
    <string name="chatactivity_groupdetail">Details</string>
    <string name="chatactivity_grouphied">Hide</string>
    <string name="chatactivity_groupmore">, more</string>
    <string name="chatmsgviewadapter_selecttoopen">Choose a program to open the file</string>
    <string name="friendlistactivity_contactaddsucc">Get contacts success</string>
    <string name="linking">...</string>
    <string name="linkingerror" />
    <string name="linkingfail">"Can't connect to Server!"</string>
    <string name="friendlistactivity_deletecontact">Delete Contact</string>
    <string name="friendlistactivity_setting">Setting</string>
    <string name="friendlistactivity_contact">Contacts</string>
    <string name="friendlistactivity_message">Message</string>
    <string name="sureexit">Are you sure to exit?</string>
    <string name="friendlistactivity_readfromcontact">Input from cellpone contacts?</string>
    <string name="friendlistactivity_sureexitlogin">Are you sure to log out?</string>
    <string name="friendlistactivity_sureclear">Clear All Message Data?</string>
    <string name="friendlistacitvity_cannotreadfromcontact">"Can't read contact from cellphone by off line."</string>
    <string name="friendsettingpage_myappleid">My AppleID:</string>
    <string name="friendsettingpage_aboutimessage">About iMessage</string>
    <string name="friendsettingpage_clearmessage">Clear Message Data</string>
    <string name="friendsettingpage_ip">IP:</string>
    <string name="friendsettingpage_readcontact">import contacts from your phone</string>
    <string name="friendsettingpage_loginout">Log Out</string>
    <string name="friendsettingpage_checkupdate">Check Version</string>
    <string name="friendsettingpage_help">Help</string>
    <string name="getmsgservice_newmsg">New messages</string>
    <string name="loginactivity_checkingpassword">Verifying...</string>
    <string name="passwordorappleidempty">Password or AppleID is Empty!</string>
    <string name="loginpage_useridtoactivemessage">Sign in with your Apple ID or create a new account to activate iMessage</string>
    <string name="loginpage_insertappleid">Enter Apple ID</string>
    <string name="loginactivity_networkhint">Hint</string>
    <string name="loginactivity_netnotopen">Your network not open</string>
    <string name="loginactivity_opennetwork">Open</string>
    <string name="loginactivity_gotoappleservicer">Are you sure your Password and AppleID is right? Go to Apple Servicer to check it.</string>
    <string name="loginactivity_loginsucc">SignIn Success!</string>
    <string name="loginactivity_passwordorappleiderror">Password or Apple ID error</string>
    <string name="loginactivity_emailnotcheck">A verification email was previously sent to your email address, you should check it before Sign in.</string>
    <string name="loginactivity_serverclosenewidlogin">The Server is busy, please try again after one minute.</string>
    <string name="loginactivity_loginprotolerror">Sign in error, Please try again.</string>
    <string name="loginactivity_networkerror">Sign in error, Please wait a moment, and try again.</string>
    <string name="myactivity_appleidalreadlogin">The Apple ID has logined,Please Sign in after one minute.</string>
    <string name="myactivity_appleidloginother">The Apple ID logined in other place.</string>
    <string name="myactivity_newmessage">new message</string>
    <string name="myactivity_query">Query</string>
    <string name="myactivity_loginagain">The password has been changed,please log out and try again.</string>
    <string name="myactivity_pleasesigninagain">Please Log Out and Sign In again.</string>
    <string name="newmessageactivity_query">Query...</string>
    <string name="newmessageactivity_usernotexit">not exist!</string>
    <string name="newmessageactivity_loginout">off</string>
    <string name="newmessageactivity_warn">warn</string>
    <string name="newmessageactivity_forgetaddplus">did you forget adding country code before the phone number?</string>
    <string name="newmessageactivity_notexit">input error, or not open the iMessage server!</string>
    <string name="newmessageactivity_queryerror">Query Error!</string>
    <string name="newmessageactivity_send">Send</string>
    <string name="newmessageactivity_userormessageempty">The Apple ID or Message Is Empty.</string>
    <string name="registeractivity_registing">Register...</string>
    <string name="registeractivity_regist">Register</string>
    <string name="registeractivity_redparterror">Required fields have been left blank.</string>
    <string name="registeractivity_alreadregister">Email address is already an Apple ID.</string>
    <string name="registeractivity_registersucc">Register Success,A verification email was previously sent to your email address, you should check it before Sign in.</string>
    <string name="registeractivity_networkerror">NewWork Error,Try Again.</string>
    <string name="registeractivity_unknowerror">Unkonw Error,Try Again.</string>
    <string name="registeractivity_noemailsucc">Register Success.</string>
    <string name="aboutimessage_aboutimessage">About iMessage</string>
    <string name="aboutimessage_back">Back</string>
    <string name="aboutimessage_version_info">Android version of iMessage</string>
    <string name="aboutimessage_version">Version:</string>
    <string name="aboutimessage_headtext">As We Know, iMessage can only be used between Apples, but from now on, it will changed!</string>
    <string name="aboutimessage_bodytext">The primary purposes of project are to make everyone should be able to chat via iMessage on Android for free. There are no hidden costs and no ads in the application. This project is meant to make you able to chat with your friends that have an iPhone, while you have the comfort of your own Android device.</string>
    <string name="aboutimessage_tailtext">Welcome to join our Team, for iMessage on Android works perfectly.</string>
    <string name="aboutimessage_team">HuLuWa Team</string>
    <string name="aboutimessage_ouremail">contact: huluwateam@gmail.com</string>
    <string name="aboutimessage_homepage">www.huluwa.org</string>
    <string name="introduce_phones">if your friends use iPhone , you must add the Countries code before Phone number.</string>
    <string name="introduce_phones1">American user , Add +1, so should input +12123456789</string>
    <string name="introduce_appleid">Send a message to your friends by using a AppleID.</string>
    <string name="introduce_appleid1">( like huluwateam@gmail.com )</string>
    <string name="introduce_input">Import contacts from your phone.</string>
</resources>