<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/uibuttonbardefaultbackgroundtop" android:layout_width="fill_parent" android:layout_height="45.0dip">
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/aboutimessage_head" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aboutimessage_aboutimessage" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        <Button android:textSize="13.0sp" android:textColor="@color/window_bg" android:id="@id/aboutimessage_back" android:background="@drawable/backbuttonselector" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="3.0dip" android:minWidth="55.0dip" android:minHeight="45.0dip" android:text="@string/aboutimessage_back" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:background="@color/window_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/window_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:textSize="20.0sp" android:textColor="#ffffffff" android:background="@drawable/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
            <TextView android:textSize="15.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/aboutimessage_version_info" />
            <TextView android:textSize="13.0sp" android:textColor="@color/black" android:id="@id/aboutimessage_curvision" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aboutimessage_version" />
        </LinearLayout>
        <LinearLayout android:gravity="left" android:orientation="vertical" android:background="@color/window_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="13.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/aboutimessage_headtext" />
            <TextView android:textSize="13.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:text="@string/aboutimessage_bodytext" />
            <TextView android:textSize="13.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:text="@string/aboutimessage_tailtext" />
        </LinearLayout>
        <LinearLayout android:gravity="right" android:orientation="vertical" android:background="@color/window_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <TextView android:textSize="13.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/aboutimessage_team" />
        </LinearLayout>
        <LinearLayout android:gravity="left" android:orientation="vertical" android:background="@color/window_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
            <TextView android:textSize="13.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/aboutimessage_ouremail" />
            <TextView android:textSize="13.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/aboutimessage_homepage" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>