<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:orientation="vertical" android:id="@id/register_layout" android:background="@drawable/uibuttonbardefaultbackgroundtop" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_weight="0.01">
            <Button android:textSize="13.0sp" android:textColor="@color/window_bg" android:id="@id/register_cancle" android:background="@drawable/editbuttonselector" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="3.0dip" android:minWidth="55.0dip" android:minHeight="45.0dip" android:text="@string/cancle" android:layout_centerVertical="true" />
            <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/newappleid" android:layout_centerInParent="true" />
            <Button android:textSize="13.0sp" android:textColor="@color/window_bg" android:id="@id/register_next" android:background="@drawable/editsuccessbuttonselector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:minWidth="55.0dip" android:minHeight="45.0dip" android:text="@string/nextstep" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <ScrollView android:background="@drawable/loginbg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:background="@drawable/login_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="20.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_firstname_text" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:text="@string/firstname" />
                <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:gravity="center" android:id="@id/register_firstname_edit" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginRight="10.0dip" android:hint="@string/firstname" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@drawable/login_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="20.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_name_text" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:text="@string/name" />
                <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:gravity="center" android:id="@id/register_name_edit" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginRight="10.0dip" android:hint="@string/name" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@drawable/login_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="20.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_email_text" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:text="@string/email" />
                <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:gravity="center" android:id="@id/register_email_edit" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginRight="10.0dip" android:hint="@string/account" android:singleLine="true" android:inputType="textEmailAddress" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textSize="15.0sp" android:textColor="#ff4c576d" android:gravity="center" android:id="@id/register_hint1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/thiswillbeyournewappleid" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@drawable/login_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="20.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_password_text" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:text="@string/password" />
                <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:gravity="center" android:id="@id/register_password_edit" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginRight="10.0dip" android:hint="@string/need" android:singleLine="true" android:inputType="textPassword" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@drawable/login_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="20.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_password1_text" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:text="@string/check" />
                <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:gravity="center" android:id="@id/register_password1_edit" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginRight="10.0dip" android:hint="@string/password1" android:singleLine="true" android:inputType="textPassword" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textSize="15.0sp" android:textColor="#ff4c576d" android:gravity="center" android:id="@id/register_hint2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/passwordhint" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
                <TextView android:textSize="15.0sp" android:textColor="#ff4c576d" android:gravity="center_vertical" android:id="@id/register_hint3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/questionhint" />
            </LinearLayout>
            <RelativeLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/login_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="20.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_question_text" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:text="@string/question" />
                <ImageView android:id="@id/register_selectt" android:background="@drawable/chevron" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                <Spinner android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:gravity="center" android:id="@id/register_question_edit" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:maxLines="1" android:layout_toLeftOf="@id/register_selectt" android:layout_toRightOf="@id/register_question_text" />
            </RelativeLayout>
            <LinearLayout android:orientation="horizontal" android:background="@drawable/login_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="20.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_answer_text" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:text="@string/answer" />
                <EditText android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:gravity="center" android:id="@id/register_answer_edit" android:background="#00ffffff" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginRight="10.0dip" android:hint="@string/need" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
                <TextView android:textSize="15.0sp" android:textColor="#ff4c576d" android:gravity="center_vertical" android:id="@id/register_hint4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/borthdayhint" />
            </LinearLayout>
            <DatePicker android:id="@id/register_date_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <TextView android:textSize="18.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/register_hint5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/countryhint" />
                <TextView android:textSize="15.0sp" android:textColor="#ff4c576d" android:gravity="center_vertical" android:id="@id/register_hint6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/countryhint1" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@drawable/login_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:textSize="20.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_position_text" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:text="@string/positionhint" />
                <Spinner android:textSize="16.0sp" android:textColor="#ff1d1d1d" android:textColorHint="#ff666666" android:gravity="center" android:id="@id/register_position_edit" android:background="#00ffffff" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="30.0dip" android:maxLines="1" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <TextView android:textSize="18.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/register_hint7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/recemailhint" />
                <TextView android:textSize="15.0sp" android:textColor="#ff4c576d" android:gravity="center_vertical" android:id="@id/register_hint8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/recemailhint1" />
            </LinearLayout>
            <RelativeLayout android:gravity="fill" android:orientation="horizontal" android:background="@drawable/login_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="20.0dip">
                <TextView android:textSize="20.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/register_get_text" android:layout_width="wrap_content" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:text="@string/recemailhint2" android:layout_alignParentLeft="true" />
                <CheckBox android:id="@id/register_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>